# timesheet-app

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml  release.yml
scr/: db.py  export.py  gui.py  main.py
src/: calendar_utils.py  db.py  main.py
tests/: conftest.py  test_calendar.py  test_db.py
tests /: test_calendar.py
