[project]
name = "timesheet-tech-dept"
version = "1.0.0"
description = "Табельный учёт рабочего времени технического отдела"
authors = [{name = "Your Name"}]
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

